--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,6 @@
             <groupId>io.appium</groupId>
             <artifactId>java-client</artifactId>
             <version>5.0.4</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>ru.yandex.qatools.allure</groupId>
@@ -42,5 +41,19 @@
             <version>1.5.4</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.6.2</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
