--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,9 @@
                     <argLine>
                         -javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar
                     </argLine>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>src/test/resources/all-tests.xml</suiteXmlFile>
+                    </suiteXmlFiles>
                 </configuration>
                 <dependencies>
                     <dependency>
