appPackage name in Android driver capabilities

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 device=YourDeviceName
 platform=Android
 appName=ShoppingList.apk
+packageName=com.slava.buylist
 appRelativeLocationUnderResources=app
