Add capabilities for Appium cloud testing in SauceLabs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,24 @@ platform=Android
 appName=ShoppingList.apk
 packageName=com.slava.buylist
 appRelativeLocationUnderResources=app
+
+
+#SauceLabs settings and capabilities
+
+sauceLabsLogin=tgetmanova
+sauceLabsAccessKey=access_key_value_here
+testRunName=Buy List app test case
+
+# US devices
+
+sauceLabsRemoteUrl=us1.appium.testobject.com/wd/hub
+
+#sauceLabsDeviceName=Samsung_Galaxy_S6_sjc_free
+#sauceLabsDeviceName=LG_Nexus_5X_free
+sauceLabsDeviceName=Motorola_Moto_E2_real_us
+
+# Europe devices
+
+#sauceLabsRemoteUrl=eu1.appium.testobject.com/wd/hub
+
+#sauceLabsDeviceName=Motorola_Moto_E_2nd_gen_free
